<resources>
    <string name="app_name">movie-application-esra-kaya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchMoviePage_search">Search</string>
    <string name="searchMoviePage_notFound">Movie not found.. :(</string>
    <string name="searchMoviePage_result">Result</string>
    <string name="homePage_topRatedMovies">Top Rated Movies</string>
    <string name="homePage_upcomingMovies">Upcoming Movies</string>
    <string name="homePage_popularMovies">Popular Movies</string>
    <string name="upComingItem_originalLanguage">Org. Lng:</string>
    <string name="homePage_seeMore">See More</string>
    <string name="popularity">%s popularity</string>
    <string name="dashboardPage_darkMode">Dark Mode</string>
    <string name="dashboardPage_lightMode">Light Mode</string>
    <string name="maintenancePage_title">App Maintenance</string>
    <string name="maintenancePage_description">Our application will be under maintenance for a while to serve you better. Don\'t forget to visit again and discover what\'s new.</string>
    <string name="maintenancePage_buttonText">Close App</string>
    <string name="dashboardPage_changeThemeImage">Change Theme Image</string>
    <string name="dashboardPage_searchIcon">Search Icon</string>
    <string name="dashboardPage_notificationIcon">Notification Icon</string>
    <string name="forceUpdatePage_title">The app is out of date :(</string>
    <string name="forceUpdatePage_forceUpdateImage">Force Update Image</string>
    <string name="forceUpdatePage_description">Let\'s update it to have the best experience!</string>
    <string name="forceUpdatePage_buttonText">Update</string>
    <string name="maintenancePage_maintenanceImageContentDesc">App Maintenance Page</string>
    <string name="movieListPage_backImageContentDescription">Back Image</string>
    <string name="movieDetailPage_backImageContentDescription">Back Image</string>
    <string name="movieDetailPage_likeStarsGroupContentDescription">Like Stars Group</string>
    <string name="searchMoviePage_backImageContentDesc">Back Image</string>
    <string name="SearchMoivePage_searchIconContentDescription">Search Icon</string>
    <string name="trailerPage_backImageContentDescription">Back Icon</string>
    <string name="movieListPage_posterContentDesc">Movie Poster</string>
    <string name="trailerPage_trailerImageContentDesc">Trailer Poster</string>
    <string name="trailerPage_playIconContentDesc">Play Icon</string>
    <string name="movieCard_moviePosterImageContentDesc">Movie Poster</string>
    <string name="notificationPage_desc">Notification Description</string>
    <string name="notificationPage_notificationIconContentDesc">Notification Icon</string>
    <string name="notificationPage_title">Notification title</string>
</resources>